// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows defaults to the http url scheme 1`] = `
Array [
  "http://localhost:23517/",
]
`;

exports[`allows setting the url scheme to https 1`] = `
Array [
  "https://otherhost:3000/",
]
`;

exports[`can chain method calls when using if with a callback and a false condition 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "two",
          "label": "Text",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "blue",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "three",
          "label": "Text",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`can chain multiple if calls with callbacks together 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test",
          "label": "Text",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "green",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "lg",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "hide",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`can handle multiple consecutive calls to limit 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "limited loop A iteration 0",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "limited loop B iteration 0",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "limited loop A iteration 1",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "limited loop B iteration 1",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`can send additional payloads from the sent payload callback 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<strong>test</strong>",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "purple",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`can send payloads from the sending payload callback 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "sent before the main payload",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<strong>test</strong>",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`can transform a request into JSON 1`] = `"{\\"uuid\\":\\"1-2-3-4\\",\\"payloads\\":[],\\"meta\\":[{\\"test_version\\":1}]}"`;

exports[`conditionally shows a payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`doesn't blow up when calling html without a value 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`measures the execution time of a closure 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "is_new_timer": false,
          "max_memory_usage_during_total_time": 0,
          "max_memory_usage_since_last_call": 0,
          "name": "closure",
          "time_since_last_call": 0,
          "total_time": 20,
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "measure",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`measures the execution time of named stopwatches 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "is_new_timer": true,
          "max_memory_usage_during_total_time": 0,
          "max_memory_usage_since_last_call": 0,
          "name": "first",
          "time_since_last_call": 0,
          "total_time": 0,
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "measure",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "is_new_timer": false,
          "max_memory_usage_during_total_time": 0,
          "max_memory_usage_since_last_call": 0,
          "name": "first",
          "time_since_last_call": 0,
          "total_time": 20,
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "measure",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`measures the execution time of repeated and unnamed calls to measure 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "is_new_timer": true,
          "max_memory_usage_during_total_time": 0,
          "max_memory_usage_since_last_call": 0,
          "name": "default",
          "time_since_last_call": 0,
          "total_time": 0,
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "measure",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "is_new_timer": false,
          "max_memory_usage_during_total_time": 0,
          "max_memory_usage_since_last_call": 0,
          "name": "default",
          "time_since_last_call": 0,
          "total_time": 20,
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "measure",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "is_new_timer": false,
          "max_memory_usage_during_total_time": 0,
          "max_memory_usage_since_last_call": 0,
          "name": "default",
          "time_since_last_call": 20,
          "total_time": 40,
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "measure",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`pauses code execution 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "name": "xxxxx",
        },
        "origin": Object {
          "file": "/node_modules/tslib/tslib.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "create_lock",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a boolean payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": true,
          "label": "Boolean",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a caller payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "frame": Object {
            "class": "Ray",
            "file_name": "Ray.ts",
            "line_number": 999,
            "method": "caller",
            "vendor_frame": false,
          },
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "caller",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a classname payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "Ray",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a clear all payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "clear_all",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a confetti payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "confetti",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a clear screen payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "name": "",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "new_screen",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a color payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "green",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "orange",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "purple",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "blue",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "gray",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a confetti payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "confetti",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a custom payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test 123",
          "label": "test",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test 4",
          "label": "",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test 5",
          "label": "",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test 5",
          "label": "",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a hide payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "hide",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a json string payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": Object {
            "A": 123,
          },
          "label": "JSON",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a label payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "label": "test-123",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "label",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a new screen payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "name": "test 1",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "new_screen",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a notify payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "value": "hello world",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "notify",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a null payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": null,
          "label": "Null",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a raw payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "one",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
      Object {
        "content": Object {
          "values": Array [
            "two",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a remove payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a remove payload conditionally 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a screen color payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "screen_color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "green",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "screen_color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a separator payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "separator",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a size payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "lg",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "sm",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "lg",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a string payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "test",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a table payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "label": "table",
          "values": Array [
            1,
            2,
            "<code style=\\"font-size: 0.8rem!important;\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Object</span>&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-600 \\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"A\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span>1<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">}</span></code></code>",
            "<code style=\\"font-size: 0.8rem!important;\\">Ray&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-600 \\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"canSendPayload\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">true</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"inCallback\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">false</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"limitOrigin\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"settings\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span>Settings&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"_host\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"localhost\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"_port\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span>23510<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"_scheme\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"http\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"always_send_raw_values\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">false</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"enable\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">true</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"enabled_callback\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"intercept_console_log\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">false</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"local_path\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"not_defined\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">false</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"originalSettings\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Object</span>&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"always_send_raw_values\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">false</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"enable\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">true</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"host\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"localhost\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"local_path\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"not_defined\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">false</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"port\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span>23510<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"remote_path\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">}</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"remote_path\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"sending_payload_callback\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"sent_payload_callback\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-indigo-600 bold\\">null</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">}</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"uuid\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"fakeUuid\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">}</span></code></code>",
            true,
            null,
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "table",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "label": "Table",
          "values": Array [
            "<code style=\\"font-size: 0.8rem!important;\\"><code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-500 p-0\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Array</span>&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">[</span><br>&nbsp;&nbsp;&nbsp;&nbsp;3<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;4<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">]</span></code></code>",
            "<code style=\\"font-size: 0.8rem!important;\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Object</span>&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-600 \\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"B\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span>2<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">}</span></code></code>",
            false,
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "table",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "label": "Table",
          "values": Object {
            "counter": 123,
            "message": "hello world",
          },
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "table",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "label": "Test",
          "values": Object {
            "name": "test",
            "value": 987,
          },
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "table",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a text payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test 1",
          "label": "Text",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "&lt;em&gt;test 2&lt;/em&gt;",
          "label": "Text",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an error payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<span class=\\"text-red-400 bold\\">Error</span>: <br><span class=\\"pl-5 text-gray-500\\">test error</span>",
          "label": "Error",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an event payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "class_based_event": true,
          "event": undefined,
          "name": "testevent",
          "payload": "<code style=\\"font-size: 0.8rem!important;\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Array</span>&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">[</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">]</span></code>",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "event",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an exception payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "class": "Error",
          "frames": Array [
            Object {
              "class": "Object",
              "file_name": "/tests/Ray.test.ts",
              "line_number": 999,
              "method": "<anonymous>",
              "snippet": Array [],
              "vendor_frame": false,
            },
          ],
          "message": "test",
          "meta": Object {},
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "exception",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an exception payload with metadata 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "class": "Error",
          "frames": Array [
            Object {
              "class": "Object",
              "file_name": "/tests/Ray.test.ts",
              "line_number": 999,
              "method": "<anonymous>",
              "snippet": Array [],
              "vendor_frame": false,
            },
          ],
          "message": "test",
          "meta": Object {
            "one": 1,
            "ten": 10,
            "twentyThree": 23,
          },
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "exception",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an html payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<em>test</em>",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an html payload when calling ray() with an object argument 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<code style=\\"font-size: 0.8rem!important;\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Object</span>&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-600 \\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"A\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span>123<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-green-600 p-0\\">\\"B\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-500 p-0\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-600 bold\\">Array</span>&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">[</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">]</span></code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-orange-400 bold\\">}</span></code></code>",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an image payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<img src=\\"http://localhost/test.png\\" alt=\\"\\" />",
          "label": "Image",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an object as json payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "value": "\\"{\\\\\\"a\\\\\\":1,\\\\\\"b\\\\\\":2}\\"",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "json_string",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an xml payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "&lt;root&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&lt;abc&gt;1&lt;/abc&gt;<br>&lt;/root&gt;",
          "label": "XML",
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends show and hide app payloads 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "show_app",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "hide_app",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends the ray ban payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "🕶",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends the ray charles payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "🎶 🎹 🎷 🕺",
          ],
        },
        "origin": Object {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;
